@@ -1,3 +1,9 @@
+2009-09-09  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinydebian.el (tinydebian-bug-system-info-os-architecture):
+	Use --print-architecture instead of obsolete
+	--print-installation-architecture.
+
 2009-09-05  Jari Aalto  <jari.aalto@cante.net>
 
 	* other/folding.el
